--- a/src/theme/material/variants/default.m.css
+++ b/src/theme/material/variants/default.m.css
@@ -92,6 +92,11 @@
 	--mdc-font-size-large: 22px;
 	--mdc-font-size-xl: 24px;
 	--mdc-font-size-xxl: 26px;
+
+	--mdc-font-weight-light: 300;
+	--mdc-font-weight-normal: normal;
+	--mdc-font-weight-heavy: 700;
+
 	--mdc-disabled-color: #bbb;
 
 	--mdc-tab-background: var(--mdc-theme-surface);
