--- a/src/theme/dojo/variants/dark.m.css
+++ b/src/theme/dojo/variants/dark.m.css
@@ -11,6 +11,9 @@
 	--font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica, Arial,
 		sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol';
 	--font-size-base: 16px;
+	--font-weight-light: 300;
+	--font-weight-normal: normal;
+	--font-weight-heavy: 700;
 	--font-size-xs: 12px;
 	--font-size-small: 14px;
 	--font-size-medium: 16px;
