--- a/src/theme/dojo/variants/dark.m.css
+++ b/src/theme/dojo/variants/dark.m.css
@@ -11,7 +11,15 @@
 	--font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica, Arial,
 		sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol';
 	--font-size-base: 16px;
+	--font-weight-light: 300;
+	--font-weight-normal: normal;
+	--font-weight-heavy: 700;
+	--font-size-xs: 12px;
 	--font-size-small: 14px;
+	--font-size-medium: 16px;
+	--font-size-large: 22px;
+	--font-size-xl: 24px;
+	--font-size-xxl: 26px;
 	--font-size-title: 20px;
 	--font-size-icon: 24px;
 	--line-height-base: 24px;
