Style text input, text area and all derived widgets without outlined time, standardize default as well

--- a/src/theme/default/text-input.m.css
+++ b/src/theme/default/text-input.m.css
@@ -13,11 +13,6 @@
 .inputWrapper {
 }
 
-.defaultKindInputWrapper {
-}
-
-.defaultKindInputWrapperFocused {
-}
 /* Added to a disabled TextInput */
 .disabled {
 }
@@ -39,11 +34,11 @@
 /* Root of the trailing wrapper*/
 .trailing {
 }
+
 /* Added to the wrapper when there is leading content */
-.hasLeadingDefaultKind {
+.hasLeading {
 }
-.hasLeadingOutlinedKind {
-}
+
 /* Added to the wrapper when there is trailing content */
 .hasTrailing {
 }
@@ -103,4 +98,17 @@
 }
 
 .notchedOutlineTrailing {
+}
+
+/* Applied to default inputs */
+.ripple {
+}
+
+.lineRipple {
+}
+
+.defaultKindFocused {
+}
+
+.defaultKindLineRippleFocused {
 }
