--- a/src/theme/material/text-area.m.css
+++ b/src/theme/material/text-area.m.css
@@ -2,7 +2,16 @@
 }
 
 .wrapper {
-	composes: mdc-text-field mdc-text-field--textarea mdc-text-field--fullwidth from '@material/textfield/dist/mdc.textfield.css';
+	width: 100%;
+	composes: mdc-text-field mdc-text-field--textarea from '@material/textfield/dist/mdc.textfield.css';
+}
+
+.defaultKind {
+	composes: mdc-text-field--filled from '@material/textfield/dist/mdc.textfield.css';
+}
+
+.outlinedKind {
+	composes: mdc-text-field--outlined from '@material/textfield/dist/mdc.textfield.css';
 }
 
 .root .input {
@@ -23,11 +32,11 @@
 
 .inputWrapper {
 	width: 100%;
+	composes: mdc-text-field__resizer from '@material/textfield/dist/mdc.textfield.css';
 }
 
-.root .input {
-	border: 1px solid var(--mdc-border-color);
-	border-radius: var(--mdc-theme-border-radius);
+.noLabel {
+	composes: mdc-text-field--no-label from '@material/textfield/dist/mdc.textfield.css';
 }
 
 .root .focused .input {
@@ -36,4 +45,41 @@
 
 .focused {
 	composes: mdc-text-field--focused from '@material/textfield/dist/mdc.textfield.css';
+}
+
+.notchedOutline {
+	composes: mdc-notched-outline mdc-notched-outline--upgraded from '@material/textfield/dist/mdc.textfield.css';
+}
+
+.notchedOutlineNotched {
+	composes: mdc-notched-outline--notched from '@material/textfield/dist/mdc.textfield.css';
+}
+
+.notchedOutlineLeading {
+	composes: mdc-notched-outline__leading from '@material/textfield/dist/mdc.textfield.css';
+}
+
+.notchedOutlineNotch {
+	composes: mdc-notched-outline__notch from '@material/textfield/dist/mdc.textfield.css';
+}
+
+.notchedOutlineTrailing {
+	composes: mdc-notched-outline__trailing from '@material/textfield/dist/mdc.textfield.css';
+}
+
+/* Applied to default inputs */
+.ripple {
+	composes: mdc-text-field__ripple from '@material/textfield/dist/mdc.textfield.css';
+}
+
+.lineRipple {
+	composes: mdc-line-ripple from '@material/textfield/dist/mdc.textfield.css';
+}
+
+.defaultKindFocused {
+	composes: mdc-ripple-upgraded--background-focused from '@material/textfield/dist/mdc.textfield.css';
+}
+
+.defaultKindLineRippleFocused {
+	composes: mdc-line-ripple--active from '@material/textfield/dist/mdc.textfield.css';
 }
