make outline stuff work properly

--- a/src/theme/default/text-area.m.css
+++ b/src/theme/default/text-area.m.css
@@ -42,6 +42,10 @@
 .noLabel {
 }
 
+/* Applied to root of the outlined label when active */
+.outlinedLabelActive {
+}
+
 /* Applied to outlined inputs */
 .outlinedKind {
 }
