--- a/src/theme/material/text-area.m.css
+++ b/src/theme/material/text-area.m.css
@@ -6,7 +6,7 @@
 	composes: mdc-text-field mdc-text-field--textarea from '@material/textfield/dist/mdc.textfield.css';
 }
 
-.root .wrapper {
+.root .wrapper.defaultKind {
 	background-color: var(--mdc-text-input-background);
 }
 
@@ -24,6 +24,11 @@
 
 .outlinedKind {
 	composes: mdc-text-field--outlined from '@material/textfield/dist/mdc.textfield.css';
+}
+
+.outlinedLabelActive {
+	transform: translateY(-130%) !important;
+	font-size: 0.75rem !important;
 }
 
 .root .input {
